kubernetes/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app.kubernetes.io/instance: grafana
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
